--- a/styles/styles.css
+++ b/styles/styles.css
@@ -303,9 +303,8 @@ body{
 	article p{
 		display: block;
 		width:60rem;
-		
-		padding:2rem;
-		font-size: 1rem;
+		padding:1.3rem;
+		font-size: 2rem;
 	}
 	
 }
@@ -352,36 +351,21 @@ body{
 	}
 }
 
-.text-container {
-	font-size: 0.5rem;
-}
-
 .text-container h2 {
     font-size: 2rem;
 	padding-left: 2rem;
 }
 
 .text-container p {
-    font-size: 0.7rem; 
-    line-height: 1.5;
-	padding: 2rem; 
-}
-
-.text-container {
-	font-size: 0.5rem;
-}
-
-.text-container h2 {
-    font-size: 2rem;
-	padding-left: 2rem;
-}
-
-.text-container p {
-    font-size: 0.7rem; 
+    font-size: 0.9rem; 
     line-height: 1.5;
 	padding: 1rem; 
 } 
-
+.text-container {
+	overflow: auto; 
+    white-space: normal; 
+    text-overflow: ellipsis;
+}
 /* Section: 
 ---------------------------------------------*/
 
